--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -13,7 +13,8 @@
         android:layout_width="170dp"
         android:layout_height="170dp"
         android:layout_gravity="center"
-        android:layout_marginTop="30dp" />
+        android:layout_marginTop="30dp"
+        app:srcCompat="@drawable/man" />
 
     <TextView
         android:id="@+id/settings_display_name"
