--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -8,13 +8,13 @@
     android:orientation="vertical"
     tools:context=".SettingsActivity">
 
-    <com.mikhaellopez.circularimageview.CircularImageView
+    <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/settings_image"
         android:layout_width="170dp"
         android:layout_height="170dp"
         android:layout_gravity="center"
         android:layout_marginTop="30dp"
-        app:srcCompat="@drawable/man" />
+        android:src="@drawable/man"/>
 
     <TextView
         android:id="@+id/settings_display_name"
