--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -21,7 +21,7 @@
             android:layout_height="250dp"
             android:layout_gravity="center"
             android:scaleType="centerCrop"
-            android:src="@drawable/man" />
+            android:src="@drawable/default_avatar" />
 
 
         <TextView
