--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -14,7 +14,7 @@
         android:layout_height="170dp"
         android:layout_gravity="center"
         android:layout_marginTop="30dp"
-        android:src="@drawable/man"/>
+        android:src="@drawable/default_avatar"/>
 
     <TextView
         android:id="@+id/settings_display_name"
